--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
